syntax = "proto3";

service ProductService {
    rpc List (Empty) returns (ProductList) {}
}

message Empty {}

message Discount{
    float pct = 1;
    int32 value_in_cents = 2;
}

message Product {
    string id = 1;
    int32 price_in_cents = 2;
    string title = 3;
    string description = 4;
    Discount discount = 5;

}

message ProductList{
    repeated Product products = 1;
}